修改变量风格

--- a/html/location.html
+++ b/html/location.html
@@ -29,12 +29,12 @@
 </script>
 </head>
 <body>
-    <div id="8359c1608d4c4a82a4f5b9ae81375c3e" style="width:800px;height:400px;"></div>
+    <div id="651f482f470f4e778f378a1160b98186" style="width:800px;height:400px;"></div>
     <script type="text/javascript">
 
-var myChart_8359c1608d4c4a82a4f5b9ae81375c3e = echarts.init(document.getElementById('8359c1608d4c4a82a4f5b9ae81375c3e'), 'light', {renderer: 'canvas'});
+var myChart_651f482f470f4e778f378a1160b98186 = echarts.init(document.getElementById('651f482f470f4e778f378a1160b98186'), 'light', {renderer: 'canvas'});
 
-var option_8359c1608d4c4a82a4f5b9ae81375c3e = {
+var option_651f482f470f4e778f378a1160b98186 = {
     "title": [
         {
             "text": "IT\u533a\u57df\u5206\u5e03",
@@ -68,7 +68,7 @@ var option_8359c1608d4c4a82a4f5b9ae81375c3e = {
             }
         }
     },
-    "series_id": 8482572,
+    "series_id": 434592,
     "tooltip": {
         "trigger": "item",
         "triggerOn": "mousemove|click",
@@ -87,36 +87,48 @@ var option_8359c1608d4c4a82a4f5b9ae81375c3e = {
             "type": "pie",
             "data": [
                 {
-                    "name": "\u6d77\u6dc0\u533a",
-                    "value": 134.0
+                    "name": "\u9ad8\u65b0\u533a",
+                    "value": 187.0
                 },
                 {
-                    "name": "\u671d\u9633\u533a",
-                    "value": 127.0
+                    "name": "\u6b66\u4faf\u533a",
+                    "value": 56.0
                 },
                 {
-                    "name": "\u5927\u5174\u533a",
-                    "value": 8.0
+                    "name": "\u9526\u6c5f\u533a",
+                    "value": 11.0
                 },
                 {
-                    "name": "\u4e1c\u57ce\u533a",
+                    "name": "\u53cc\u6d41\u53bf",
                     "value": 7.0
                 },
                 {
-                    "name": "\u660c\u5e73\u533a",
+                    "name": "\u53cc\u6d41\u533a",
+                    "value": 5.0
+                },
+                {
+                    "name": "\u6e29\u6c5f\u533a",
+                    "value": 5.0
+                },
+                {
+                    "name": "\u6210\u534e\u533a",
+                    "value": 4.0
+                },
+                {
+                    "name": "\u90eb\u53bf",
                     "value": 3.0
                 },
                 {
-                    "name": "\u897f\u57ce\u533a",
+                    "name": "\u91d1\u725b\u533a",
                     "value": 3.0
                 },
                 {
-                    "name": "\u901a\u5dde\u533a",
+                    "name": "\u9f99\u6cc9\u9a7f\u533a",
                     "value": 2.0
                 },
                 {
-                    "name": "\u95e8\u5934\u6c9f\u533a",
-                    "value": 1.0
+                    "name": "\u9752\u7f8a\u533a",
+                    "value": 2.0
                 }
             ],
             "radius": [
@@ -145,20 +157,23 @@ var option_8359c1608d4c4a82a4f5b9ae81375c3e = {
                     "formatter": "{b}: {d}%"
                 }
             },
-            "seriesId": 8482572
+            "seriesId": 434592
         }
     ],
     "legend": [
         {
             "data": [
-                "\u6d77\u6dc0\u533a",
-                "\u671d\u9633\u533a",
-                "\u5927\u5174\u533a",
-                "\u4e1c\u57ce\u533a",
-                "\u660c\u5e73\u533a",
-                "\u897f\u57ce\u533a",
-                "\u901a\u5dde\u533a",
-                "\u95e8\u5934\u6c9f\u533a"
+                "\u9ad8\u65b0\u533a",
+                "\u6b66\u4faf\u533a",
+                "\u9526\u6c5f\u533a",
+                "\u53cc\u6d41\u53bf",
+                "\u53cc\u6d41\u533a",
+                "\u6e29\u6c5f\u533a",
+                "\u6210\u534e\u533a",
+                "\u90eb\u53bf",
+                "\u91d1\u725b\u533a",
+                "\u9f99\u6cc9\u9a7f\u533a",
+                "\u9752\u7f8a\u533a"
             ],
             "selectedMode": "multiple",
             "show": true,
@@ -199,7 +214,7 @@ var option_8359c1608d4c4a82a4f5b9ae81375c3e = {
         "#f6f5ec"
     ]
 };
-myChart_8359c1608d4c4a82a4f5b9ae81375c3e.setOption(option_8359c1608d4c4a82a4f5b9ae81375c3e);
+myChart_651f482f470f4e778f378a1160b98186.setOption(option_651f482f470f4e778f378a1160b98186);
 
 </script>
 </body>
